--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "iview": "^2.11.0",
+    "jspdf": "^1.3.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
